--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -4,6 +4,10 @@ p
   strong Name:
   = @user.name
 
+ul
+  - @user.dogs.each do |dog|
+    li = dog.name
+
 => link_to 'Edit', edit_user_path(@user)
 '|
 =< link_to 'Back', users_path
